# Antigravity-Manager

./: .dockerignore  .gitignore  Dockerfile  README.md  README_EN.md  WALKTHROUGH.md  debug_stream.py  docker-compose.yml  frontend_log.txt  full_stream.txt  package-lock.json  package.json  pnpm-lock.yaml  server_log.txt  vite.config.ts
.github/workflows/: docker-build.yml  docker-fullstack-image.yml  release.yml
docs/: WEB_DEPLOY.md  WEB_FEATURE_STATUS.md
server/: Cargo.toml  package.json  pnpm-lock.yaml
server/src/: error.rs  index.ts  lib.rs  main.rs  state.rs
server/src/api/: account.rs  common.rs  config.rs  import.rs  logs.rs  mod.rs  proxy.rs
server/src/core/: db.rs  device.rs  mod.rs  quota.rs  scheduler.rs  traits.rs
server/src/core/models/: account.rs  config.rs  mod.rs  proxy_config.rs  quota.rs  token.rs
server/src/core/services/: account.rs  database.rs  mod.rs  oauth.rs  quota.rs
server/src/core/storage/: config.rs
server/src/db/: sqlite.ts
server/src/legacy/modules/: account.rs
server/src/proxy/: config.rs  log_store.rs  mod.rs  monitor.rs  project_resolver.rs  rate_limit.rs  token_manager.rs
server/src/proxy/common/: json_schema.rs
server/src/proxy/handlers/: audio.rs  claude.rs  common.rs  gemini.rs  mcp.rs  mod.rs  openai.rs  warmup.rs
server/src/proxy/mappers/: error_classifier.rs  mod.rs
server/src/proxy/mappers/claude/: mod.rs  request.rs  streaming.rs  thinking_utils.rs
server/src/proxy/mappers/gemini/: wrapper.rs
server/src/proxy/mappers/openai/: collector.rs  mod.rs  models.rs  request.rs  response.rs  streaming.rs
server/src/proxy/middleware/: mod.rs  monitor.rs
server/src/proxy/providers/: zai_anthropic.rs
server/src/proxy/upstream/: client.rs
server/src/routes/: accounts.ts  config.ts  proxy.ts
server/src/services/: converter.ts  geminiClient.ts  google.ts  tokenManager.ts
server/src/web/: handlers.rs  routes.rs  server.rs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  comprehensive_test.sh  extended_test.sh  target_test.sh  tauri.conf.json  verify_integrations.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  proxy.rs
src-tauri/src/core/models/: account.rs  config.rs  mod.rs  proxy_config.rs  quota.rs
src-tauri/src/core/services/: account.rs  database.rs  mod.rs  oauth.rs  proxy.rs
src-tauri/src/core/storage/: config.rs  mod.rs
src-tauri/src/modules/: account.rs  migration.rs  process.rs
src-tauri/src/proxy/: log_store.rs  mod.rs  project_resolver.rs  server.rs  token_manager.rs
src-tauri/src/proxy/common/: mod.rs  model_mapping.rs  utils.rs
src-tauri/src/proxy/handlers/: claude.rs  gemini.rs  mod.rs  openai.rs
src-tauri/src/proxy/mappers/: common_utils.rs  mod.rs
src-tauri/src/proxy/mappers/claude/: mod.rs  models.rs  request.rs  utils.rs
src-tauri/src/proxy/mappers/gemini/: mod.rs  models.rs  wrapper.rs
src-tauri/src/proxy/mappers/openai/: mod.rs  models.rs  request.rs  response.rs  streaming.rs
src-tauri/src/proxy/middleware/: auth.rs  mod.rs
src-tauri/src/proxy/upstream/: client.rs
src-tauri/src/web/: handlers.rs  mod.rs  routes.rs  server.rs
src/components/accounts/: AccountCard.tsx  AccountRow.tsx  AddAccountDialog.tsx
src/components/common/: ThemeManager.tsx
src/components/layout/: Layout.tsx  Navbar.tsx
src/locales/: en.json  zh.json
src/pages/: Accounts.tsx  ApiProxy.tsx  Dashboard.tsx  Logs.tsx  Settings.tsx
src/services/: accountService.ts  configService.ts
src/stores/: useAccountStore.ts
src/types/: config.ts
src/utils/: platform.ts
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  i18n.ts  main.tsx
web/src/api/: client.ts
web/src/locales/: en.json  zh.json
web/src/pages/: Accounts.tsx  ApiProxy.tsx  Dashboard.tsx  Logs.tsx  Settings.tsx
web/src/services/: accountService.ts  configService.ts
web/src/stores/: useAccountStore.ts
(+16 files in other folders)
