[package]
name = "antigravity-server"
version = "3.3.5"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
image = "0.25.9"
thiserror = "2.0.17"
clap = { version = "4.4", features = ["derive", "env"] }

# Web Server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
eventsource-stream = "0.2"
dashmap = "6.1"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
async-stream = "0.3.6"
regex = "1.12.2"
once_cell = "1.19"
pin-project = "1.1"
bytes = "1.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"] }
