[package]
name = "antigravity_tools"
version = "3.3.2"
description = "A Tauri App"
authors = ["you"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"
default-run = "antigravity_tools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "antigravity_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# 独立 Web 服务器二进制
[[bin]]
name = "antigravity-server"
path = "src/bin/server.rs"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2.4.2", optional = true }
tauri-plugin-fs = { version = "2.4.4", optional = true }
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"], optional = true }
tauri-plugin-autostart = { version = "2.5.1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
image = "0.25.9"
thiserror = "2.0.17"

# 反代服务依赖
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
eventsource-stream = "0.2"
dashmap = "6.1"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"                        # 生成 sessionId 和 mock project_id
async-stream = "0.3.6"              # 简化异步流生成
regex = "1.12.2"                    # Duration 解析
once_cell = "1.19"                  # 静态初始化 (模型映射表)
pin-project = "1.1"                 # Pin 投影辅助
bytes = "1.5"                       # SSE 字节操作

# 数据库导入支持 (可选)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite"], optional = true }

[features]
# 默认启用 Tauri (桌面应用)
default = ["tauri-app"]
# Tauri 桌面应用
tauri-app = [
    "dep:tauri-build",
    "dep:tauri",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-autostart",
]
# 纯 Web 服务器模式 (无 Tauri 依赖, 含数据库支持)
web-server = ["dep:sqlx"]
